--- a/modelo/index.html
+++ b/modelo/index.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    
+    <section class="cointainer">
+
+    </section>
+
     <script src="./assets/js/main.js"></script>
 </body>
 </html>
