--- a/modelo/index.html
+++ b/modelo/index.html
@@ -1,16 +1,26 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Modelo</title>
-    <link rel="stylesheet" href="./assets/css/style.css">
-</head>
-<body>
-    <section class="cointainer">
+    <link rel="stylesheet" href="./assets/css/style.css" />
+  </head>
+  <body>
+    <section class="cointainer"></section>
+    <form action="">
+      <label for="input-teste-1">Label teste #1</label>
+      <input type="text" id="input-teste-1" />
 
-    </section>
+      <label for="input-teste-2">Label teste #2</label>
+      <input type="password" id="input-teste-1" />
 
+      <label for="input-teste-3">Label teste #3</label>
+      <input type="email" id="input-teste-1" />
+
+      <label for="input-teste-4">Label teste #4</label>
+      <input type="number" id="input-teste-4" />
+    </form>
     <script src="./assets/js/main.js"></script>
-</body>
+  </body>
 </html>
