--- a/modelo/index.html
+++ b/modelo/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
-    <section class="cointainer"></section>
+    <section class="container"></section>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
       incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis 
       nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
@@ -20,10 +20,10 @@
       <input type="text" id="input-teste-1" />
 
       <label for="input-teste-2">Label teste #2</label>
-      <input type="password" id="input-teste-1" />
+      <input type="password" id="input-teste-2" />
 
       <label for="input-teste-3">Label teste #3</label>
-      <input type="email" id="input-teste-1" />
+      <input type="email" id="input-teste-3" />
 
       <label for="input-teste-4">Label teste #4</label>
       <input type="number" id="input-teste-4" />
