--- a/aula26/index.html
+++ b/aula26/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Modelo</title>
-    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <section class="container">
@@ -35,6 +35,6 @@
       </form>
     </section>
 
-    <script src="./assets/js/main.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
