--- a/aula26/index.html
+++ b/aula26/index.html
@@ -3,34 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Modelo</title>
+    <title>Calcule seu IMC</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <section class="container">
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-        mollit anim id est laborum.
-      </p>
-
-      <form action="">
-        <label for="input-teste-1">Label teste #1</label>
-        <input type="text" id="input-teste-1" />
-
-        <label for="input-teste-2">Label teste #2</label>
-        <input type="password" id="input-teste-2" />
-
-        <label for="input-teste-3">Label teste #3</label>
-        <input type="email" id="input-teste-3" />
-
-        <label for="input-teste-4">Label teste #4</label>
-        <input type="number" id="input-teste-4" />
-
+      <h1>Calcule seu IMC</h1>
+      <form action="" class="form">
+        <label for="peso">Peso</label>
+        <input type="text" id="peso" />
+        <label for="altura">Altura</label>
+        <input type="text" id="altura" />
         <button>Enviar</button>
       </form>
     </section>
