adding new codes

--- a/aula26/index.html
+++ b/aula26/index.html
@@ -9,12 +9,12 @@
   <body>
     <section class="container">
       <h1>Calcule seu IMC</h1>
-      <form action="" class="form">
+      <form action="" id="form">
         <label for="peso">Peso</label>
-        <input type="text" id="peso" />
+        <input type="text" id="peso">
         <label for="altura">Altura</label>
         <input type="text" id="altura" />
-        <button>Enviar</button>
+        <button type="submit">Enviar</button>
       </form>
     </section>
 
