--- a/aula26/index.html
+++ b/aula26/index.html
@@ -16,6 +16,7 @@
         <input type="text" id="altura" />
         <button type="submit">Enviar</button>
       </form>
+      <div id="resultado"></div>
     </section>
 
     <script src="main.js"></script>
